# jax_guam

./: README.md  lqr.ipynb  plot.ipynb  pyproject.toml  setup.cfg  visualize.ipynb  visualize.py
scripts/: autotune.py  plot.py  plot_batch.py  plot_batch_include_tuned.py  simulate_batch.py  simulate_tuned_param.py  tuning.py  tuning_lqr.py
src/jax_guam/: guam_types.py
src/jax_guam/classes/: BodyClass.py  MassClass.py  PropellerClass.py  SemiWingPropClass.py  TailClass.py  TiltWingClass.py  VerticalTailClass.py  WingClass.py  WingPropClass.py  init_tiltwing.py
src/jax_guam/classes/base_functions/: FM_body.py  Fx_local.py  Fz_local.py  My_local.py  V_slipstream.py  alf_flaps.py  alf_slipstream.py  cd_local.py  cl_local.py  cm_local.py  prop_thrust.py  prop_torque.py  q_slipstream.py  u_local.py  v_local.py  w_induced.py  w_local.py
src/jax_guam/data/: read_data.py  trim_table_SFN_ConcatVer3p0.mat
src/jax_guam/functional/: aero_prop_new.py  body.py  differentiabl_lqr.py  eig_util.py  guam_new.py  init_func_tiltwing.py  lc_control.py  lqr.py  propeller.py  scheduler.py  semi_wing_prop.py  surf_engine.py  tail.py  tilt_wing.py  vehicle_eom_simple.py  vehicle_eom_utils.py  vertical_tail.py  wing_prop.py
src/jax_guam/subsystems/: guam.py
src/jax_guam/subsystems/environment/: environment.py
src/jax_guam/subsystems/genctrl_inputs/: genctrl_inputs.py
src/jax_guam/subsystems/vehicle_generalized_control/: gen_ctrl.py
src/jax_guam/utils/: angle_utils.py  batch_spline.py  debug.py  functions.py  jax_types.py  jax_utils.py  logging.py  ode.py  paths.py
(+6 files in other folders)
